# cppvk

./: .editorconfig  CMakeLists.txt  CppVk.sln  CppVk.vcxproj  CppVk.vcxproj.filters  README.md  Source.cpp  cppvk.h
Window/: App.h  AppWindow.cpp  AppWindow.h
cppvk/: context.h  destroy.h  physicaldevice.h  physicaldeviceset.h  pointer.h  type.h  variant.h  vk.h
cppvk/allocater/: allocater.h  commandbuffer.h
cppvk/allocator/: allocator.h  commandbuffer.h  devicememory.h
cppvk/builders/: Ibuilder.h  builder.h  commandpool.h  commandpoolbuilder.h  debugutilsmessanger.h  debugutilsmessengerbuilder.h  device.h  imagebuilder.h  instance.h  instancebuilder.h  logicaldevicebuilder.h  surfacebuilder.h  swapchainbuilder.h  winsurface.h
cppvk/deleter/: deleter.h
cppvk/info/: devicequeue.h  devicequeueinfo.h  info.h
cppvk/objects/: commandpool.h  debugutilsmessanger.h  debugutilsmessenger.h  device.h  image.h  instance.h  logicaldevice.h  object.h  surface.h  swapchain.h  winsurface.h
cppvk/physicaldevice/: physicaldevice.h  physicaldevicedetails.h  surfacedetails.h
include/Window/: AppWindow.cpp  AppWindow.h  WindowPtr.h
include/cppvk/: allocationcallbacks.h  common.h  details.h  glslangtools.h  memory.h  pointer.h  poolobject.h  type.h  variant.h  vk.h
include/cppvk/allocator/: commandbuffer.h  descriptorset.h  devicememory.h
include/cppvk/builders/: allocationcallbacksbuilder.h  bufferbuilder.h  commandbufferbuilder.h  commandpoolbuilder.h  debugutilsmessengerbuilder.h  descriptorpoolbuilder.h  descriptorsetbuilder.h  descriptorsetlayoutbuilder.h  devicememorybuilder.h  imagebuilder.h  imageviewbuilder.h  instancebuilder.h  logicaldevicebuilder.h  pipelinelayoutbuilder.h  shadermodulebuilder.h  surfacebuilder.h  swapchainbuilder.h
src/: Source.cpp
(+15 files in other folders)
